# chronicle

./: .gitignore  ARCHITECTURE.md  Procfile  README.md  RESEARCH.md  SHOW_HN.md  TASKS.md  VISION.md  conversations.db  pyproject.toml  railway.toml  vectors.db
chronicle/: __init__.py  api.py  cli.py  conversations.py  embeddings.py  patterns.py  synthesis.py  templates.py
patterns/: README.md
patterns/economics/: currency-crises.md  financial-crises.md  great-depression-recovery.md  inflation-episodes.md  new-era-thinking.md  reserve-currency-transitions.md  sovereign-debt-crises.md  speculative-manias.md  trade-wars.md
patterns/existential/: apocalyptic-predictions.md  climate-responses.md  existential-risk-discourse.md  nuclear-fear-cycles.md  population-bomb.md  y2k-and-tech-catastrophism.md
patterns/governance/: constitutional-moments.md  decolonization-waves.md  demagogue-patterns.md  democracy-waves.md  fall-of-rome.md  institutional-decay.md  intelligence-failures.md  reform-movements.md  revolutionary-waves.md
patterns/health/: addiction-waves.md  antibiotic-resistance-cycles.md  germ-theory-resistance.md  medical-resistance.md  mental-health-evolution.md  public-health-infrastructure.md  vaccination-resistance.md
patterns/social/: civil-rights-waves.md  enlightenment.md  generational-conflicts.md  immigration-fears.md  labor-movements.md  media-technology-moral-panics.md  moral-panics.md  pandemic-responses.md  scientific-revolutions.md  urbanization-waves.md
patterns/technology/: ai-winters.md  computing-revolution.md  electrification.md  (+6 more)
